[FIX] 메인 로직 수정